add desktop version

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,6 +4,209 @@
     
     @@include('components/header.html')
 
+    <section class="homeBox">
+
+      <div class="container">
+
+        <div class="homeBox__block">
+
+          <div class="homeBox__cont">
+
+            <span class="homeBox__text">Доставляем посылки <b><i>из Португалии</i></b> в Россию и страны СНГ</span>
+            <a class="button" href="#">Оформить посылку</a> 
+            
+          </div>
+
+          <div class="homeBox__form">
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+    <section class="tariffsPrices">
+
+      <div class="container">
+
+        <div class="title"><h2>Тарифы и цены</h2></div>
+
+        <div class="tariffsPrices__block">
+
+          <div class="tariffsPrices__box">
+            <a class="tariffsPrices__box-link" href="#">
+              <div class="tariffsPrices__box-title"><span>В Россию</span><img src="img/flags/ru.svg" alt="img" /></div>
+              <span class="tariffsPrices__box-price">от 5€</span> 
+            </a>
+          </div>
+
+          <div class="tariffsPrices__box">
+            <a class="tariffsPrices__box-link" href="#">
+              <div class="tariffsPrices__box-title"><span>В Беларусь</span><img src="img/flags/by.svg" alt="img" /></div>
+              <span class="tariffsPrices__box-price">от 5€</span> 
+            </a>
+          </div>
+
+          <div class="tariffsPrices__box">
+            <a class="tariffsPrices__box-link" href="#">
+              <div class="tariffsPrices__box-title"><span>В Казахстан</span><img src="img/flags/kz.svg" alt="img" /></div>
+              <span class="tariffsPrices__box-price">от 15€</span> 
+            </a>
+          </div>
+
+          <div class="tariffsPrices__box">
+            <a class="tariffsPrices__box-link" href="#">
+              <div class="tariffsPrices__box-title tariffsPrices__box-title--all"><span>Все тарифы</span></div>
+            </a>
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+    <section class="howWorks">
+
+      <div class="container">
+
+        <div class="title title--center"><h2>Как это работает</h2></div>
+
+        <div class="howWorks__block">
+
+          <div class="howWorks__box">
+            <span class="howWorks__box-title">Оформляете посылку</span>
+            <span class="howWorks__box-cont">Отправить можно из дома или из пункта приема.</span>
+            <span class="howWorks__box-info">Оплачиваете 3€ за доставку на склад</span>
+          </div>
+
+          <div class="howWorks__box">
+            <span class="howWorks__box-title">Посылка приходит на наш склад в Португалии</span>
+            <span class="howWorks__box-cont">Мы готовим посылку к отправке, прикрепляем таможенные документы и даем вам трек-номер для отслеживания.</span>
+            <span class="howWorks__box-info">Оплачиваете остальную часть</span>
+          </div>
+
+          <div class="howWorks__box">
+            <span class="howWorks__box-title">Посылка доставлена</span>
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+    <section class="benefits">
+
+      <div class="container">
+
+        <div class="benefits__block">
+
+          <div class="benefits__unit">
+
+            <div class="benefits__box benefits__box--registration">
+              <span class="benefits__box-title">Удобное оформление</span>
+              <span class="benefits__box-text">Документы можно заполнить на русском языке, а оплатить — онлайн.</span>
+            </div>
+  
+            <div class="benefits__box benefits__box--insurance">
+              <span class="benefits__box-title">Страховка</span>
+              <ul class="benefits__box-list">
+                <li>
+                  <span>до 50€</span>
+                  <b>бесплатно</b>
+                </li>
+                <li>
+                  <span>от 50€</span>
+                  <b>7€</b>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="benefits__unit">
+
+            <div class="benefits__box benefits__box--import">
+              <span class="benefits__box-title">Беспошлинный ввоз</span>
+              <span class="benefits__box-text">У каждой страны существуют свои правила таможенных лимитов для ввоза посылок. Лимит — это максимальная сумма вложений в одну посылку, которая не облагается налогом.</span>
+              <span class="benefits__box-link">Таможенные лимиты</span>
+            </div>
+  
+            <div class="benefits__box benefits__box--tracking">
+              <span class="benefits__box-title">Отслеживание</span>
+              <span class="benefits__box-text">Каждой посылке присваивается трек номер. Отследить посылку вы можете <a href="#">на сайте.</a></span>
+            </div>
+  
+            <div class="benefits__box benefits__box--timing">
+              <span class="benefits__box-title">Сроки доставки</span>
+              <span class="benefits__box-text">10-15 рабочиx дней.</span>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+    <section class="deliveryLongTime">
+
+      <div class="container">
+
+        <div class="title title--center title--big"><h2>Уже 10 лет доставляем посылки из Португалии</h2></div>
+
+        <div class="deliveryLongTime__text">
+
+          <p>Благодаря такому опыту, все процессы налажены и посылки доставляются быстро и надежно.</p>
+
+        </div>
+
+      </div>
+
+    </section>  
+
+
+    <section class="readyHelp">
+
+      <div class="container">
+
+        <div class="readyHelp__block">
+
+          <div class="readyHelp__cont">
+
+            <div class="title"><h2>Мы всегда готовы помочь</h2></div>
+            <span class="readyHelp__text">Ответим на вопросы как оформить послыку, и поможем узнать все про отправленные посылки.</span>
+
+          </div>
+
+          <div class="readyHelp__unit">
+
+            <div class="readyHelp__box readyHelp__box--email">
+              <span class="readyHelp__box-title">example@mail.ru</span>
+              <a class="readyHelp__box-email" href="#">Написать</a> 
+            </div>
+
+            <div class="readyHelp__box readyHelp__box--call">
+              <span class="readyHelp__box-title">+351 9992 01 34</span>
+              <a class="readyHelp__box-call" href="#">Позвонить</a> 
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>  
+
 
     <div class="hFooter"></div>
 
