Add mobile version

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -12,12 +12,31 @@
 
           <div class="homeBox__cont">
 
-            <span class="homeBox__text">Доставляем посылки <b><i>из Португалии</i></b> в Россию и страны СНГ</span>
+            <span class="homeBox__text">Доставляем посылки <b><i>из Португалии</i></b> в Казахстан и страны СНГ</span>
             <a class="button" href="#">Оформить посылку</a> 
             
           </div>
 
           <div class="homeBox__form">
+
+            <div class="homeBox-form">
+
+              <div class="homeBox-form__weight">
+                <span class="homeBox-form__weight-title">Отправить</span>
+                <input class="homeBox-form__weight-input" type="text" value="1 кг" />
+              </div>
+
+              <div class="homeBox-form__select">
+                <select> 
+                  <option>в Казахстан</option>
+                  <option>в Азербайджан</option>
+                  <option>в Беларусь</option>
+                </select>
+              </div>
+
+              <span class="homeBox-form__price">от 35€</span>
+
+            </div>
 
           </div>
 
@@ -38,8 +57,15 @@
 
           <div class="tariffsPrices__box">
             <a class="tariffsPrices__box-link" href="#">
-              <div class="tariffsPrices__box-title"><span>В Россию</span><img src="img/flags/ru.svg" alt="img" /></div>
+              <div class="tariffsPrices__box-title"><span>В Казахстан</span><img src="img/flags/kz.svg" alt="img" /></div>
               <span class="tariffsPrices__box-price">от 5€</span> 
+            </a>
+          </div>
+
+          <div class="tariffsPrices__box">
+            <a class="tariffsPrices__box-link" href="#">
+              <div class="tariffsPrices__box-title"><span>В Азербайджан</span><img src="img/flags/az.svg" alt="img" /></div>
+              <span class="tariffsPrices__box-price">от 15€</span> 
             </a>
           </div>
 
@@ -47,13 +73,6 @@
             <a class="tariffsPrices__box-link" href="#">
               <div class="tariffsPrices__box-title"><span>В Беларусь</span><img src="img/flags/by.svg" alt="img" /></div>
               <span class="tariffsPrices__box-price">от 5€</span> 
-            </a>
-          </div>
-
-          <div class="tariffsPrices__box">
-            <a class="tariffsPrices__box-link" href="#">
-              <div class="tariffsPrices__box-title"><span>В Казахстан</span><img src="img/flags/kz.svg" alt="img" /></div>
-              <span class="tariffsPrices__box-price">от 15€</span> 
             </a>
           </div>
 
@@ -205,7 +224,7 @@
 
       </div>
 
-    </section>  
+    </section>
 
 
     <div class="hFooter"></div>
