Add contacts page

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -2,7 +2,8 @@
 
   <div class="totalContainer"> 
     
-    @@include('components/header.html')
+    @@include('components/header.html', {"header" : "", "index" : 0})
+    
 
     <section class="homeBox">
 
