--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -115,7 +115,8 @@
     <div class="pages__box">
         
       <ol>
-        <li><a href="index.html">index.html</a></li>        
+        <li><a href="index.html">index.html</a></li>   
+        <li><a href="contacts.html">contacts.html</a></li>  
       </ol>
 
     </div>
