--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -117,6 +117,7 @@
       <ol>
         <li><a href="index.html">index.html</a></li>   
         <li><a href="contacts.html">contacts.html</a></li>  
+        <li><a href="tariffs.html">tariffs.html</a></li>  
       </ol>
 
     </div>
