Add all tariffs

--- a/src/html/tariffs.html
+++ b/src/html/tariffs.html
@@ -9,9 +9,299 @@
 
       <div class="container">
 
+        <div class="title title--big"><h1>Тарифы и цены</h1></div>
+
         <div class="tariffs__block">
 
-  
+          <ul class="tariffs__countries">
+            <li class="active"><img src="img/flags/ua.svg" alt="img" /><span>Украина</span></li>
+            <li><img src="img/flags/by.svg" alt="img" /><span>Беларусь</span></li>
+            <li><img src="img/flags/kz.svg" alt="img" /><span>Казахстан</span></li>
+            <li><img src="img/flags/uz.svg" alt="img" /><span>Узбекистан</span></li>
+            <li><img src="img/flags/az.svg" alt="img" /><span>Азербайджан</span></li>
+            <li><img src="img/flags/kg.svg" alt="img" /><span>Кыргызстан</span></li>
+          </ul> 
+          
+          <div class="tariffs__cont">
+
+            <div class="tariffs__cont-box active">
+              <span class="tariffs__cont-title">В Украину</span>
+              <table class="tariffs__cont-table">
+                <thead>
+                  <tr>
+                    <td></td>
+                    <td>с континента</td>
+                    <td>с островов</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>до 1 кг</td>
+                    <td>1€</td>
+                    <td>1,5€</td>
+                  </tr>
+                  <tr>
+                    <td>1–3 кг</td>
+                    <td>2€</td>
+                    <td>2,5€</td>
+                  </tr>
+                  <tr>
+                    <td>4–5 кг</td>
+                    <td>8€</td>
+                    <td>8,5€</td>
+                  </tr>
+                  <tr>
+                    <td>5–10 кг</td>
+                    <td>24€</td>
+                    <td>29€</td>
+                  </tr>
+                  <tr>
+                    <td>10–15 кг</td>
+                    <td>30€</td>
+                    <td>38€</td>
+                  </tr>
+                  <tr>
+                    <td>15–20 кг</td>
+                    <td>50€</td>
+                    <td>55€</td>
+                  </tr>
+                </tbody>
+
+              </table>
+            </div>
+
+            <div class="tariffs__cont-box">
+              <span class="tariffs__cont-title">В Беларусь</span>
+              <table class="tariffs__cont-table">
+                <thead>
+                  <tr>
+                    <td></td>
+                    <td>с континента</td>
+                    <td>с островов</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>до 11 кг</td>
+                    <td>1€</td>
+                    <td>1,5€</td>
+                  </tr>
+                  <tr>
+                    <td>11–13 кг</td>
+                    <td>2€</td>
+                    <td>2,5€</td>
+                  </tr>
+                  <tr>
+                    <td>3–5 кг</td>
+                    <td>8€</td>
+                    <td>8,5€</td>
+                  </tr>
+                  <tr>
+                    <td>5–10 кг</td>
+                    <td>24€</td>
+                    <td>29€</td>
+                  </tr>
+                  <tr>
+                    <td>10–15 кг</td>
+                    <td>30€</td>
+                    <td>38€</td>
+                  </tr>
+                  <tr>
+                    <td>66–77 кг</td>
+                    <td>80€</td>
+                    <td>95€</td>
+                  </tr>
+                </tbody>
+
+              </table>
+            </div>
+
+            <div class="tariffs__cont-box">
+              <span class="tariffs__cont-title">В Казахстан</span>
+              <table class="tariffs__cont-table">
+                <thead>
+                  <tr>
+                    <td></td>
+                    <td>с континента</td>
+                    <td>с островов</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>до 1 кг</td>
+                    <td>1€</td>
+                    <td>1,5€</td>
+                  </tr>
+                  <tr>
+                    <td>1–3 кг</td>
+                    <td>2€</td>
+                    <td>2,5€</td>
+                  </tr>
+                  <tr>
+                    <td>3–5 кг</td>
+                    <td>8€</td>
+                    <td>8,5€</td>
+                  </tr>
+                  <tr>
+                    <td>5–10 кг</td>
+                    <td>24€</td>
+                    <td>29€</td>
+                  </tr>
+                  <tr>
+                    <td>10–15 кг</td>
+                    <td>30€</td>
+                    <td>38€</td>
+                  </tr>
+                  <tr>
+                    <td>35–40 кг</td>
+                    <td>50€</td>
+                    <td>55€</td>
+                  </tr>
+                </tbody>
+
+              </table>
+            </div>
+
+            <div class="tariffs__cont-box">
+              <span class="tariffs__cont-title">В Узбекистан</span>
+              <table class="tariffs__cont-table">
+                <thead>
+                  <tr>
+                    <td></td>
+                    <td>с континента</td>
+                    <td>с островов</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>до 1 кг</td>
+                    <td>1€</td>
+                    <td>1,5€</td>
+                  </tr>
+                  <tr>
+                    <td>1–3 кг</td>
+                    <td>2€</td>
+                    <td>2,5€</td>
+                  </tr>
+                  <tr>
+                    <td>3–5 кг</td>
+                    <td>8€</td>
+                    <td>8,5€</td>
+                  </tr>
+                  <tr>
+                    <td>5–10 кг</td>
+                    <td>24€</td>
+                    <td>29€</td>
+                  </tr>
+                  <tr>
+                    <td>10–15 кг</td>
+                    <td>30€</td>
+                    <td>38€</td>
+                  </tr>
+                  <tr>
+                    <td>15–20 кг</td>
+                    <td>50€</td>
+                    <td>55€</td>
+                  </tr>
+                </tbody>
+
+              </table>
+            </div>
+
+            <div class="tariffs__cont-box">
+              <span class="tariffs__cont-title">В Азербайджан</span>
+              <table class="tariffs__cont-table">
+                <thead>
+                  <tr>
+                    <td></td>
+                    <td>с континента</td>
+                    <td>с островов</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>до 1 кг</td>
+                    <td>1€</td>
+                    <td>1,5€</td>
+                  </tr>
+                  <tr>
+                    <td>1–3 кг</td>
+                    <td>2€</td>
+                    <td>2,5€</td>
+                  </tr>
+                  <tr>
+                    <td>3–5 кг</td>
+                    <td>8€</td>
+                    <td>8,5€</td>
+                  </tr>
+                  <tr>
+                    <td>5–10 кг</td>
+                    <td>24€</td>
+                    <td>29€</td>
+                  </tr>
+                  <tr>
+                    <td>10–15 кг</td>
+                    <td>30€</td>
+                    <td>38€</td>
+                  </tr>
+                  <tr>
+                    <td>15–20 кг</td>
+                    <td>50€</td>
+                    <td>55€</td>
+                  </tr>
+                </tbody>
+
+              </table>
+            </div>
+
+            <div class="tariffs__cont-box">
+              <span class="tariffs__cont-title">В Кыргызстан</span>
+              <table class="tariffs__cont-table">
+                <thead>
+                  <tr>
+                    <td></td>
+                    <td>с континента</td>
+                    <td>с островов</td>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>до 1 кг</td>
+                    <td>1€</td>
+                    <td>1,5€</td>
+                  </tr>
+                  <tr>
+                    <td>1–3 кг</td>
+                    <td>2€</td>
+                    <td>2,5€</td>
+                  </tr>
+                  <tr>
+                    <td>3–5 кг</td>
+                    <td>8€</td>
+                    <td>8,5€</td>
+                  </tr>
+                  <tr>
+                    <td>5–10 кг</td>
+                    <td>24€</td>
+                    <td>29€</td>
+                  </tr>
+                  <tr>
+                    <td>10–15 кг</td>
+                    <td>30€</td>
+                    <td>38€</td>
+                  </tr>
+                  <tr>
+                    <td>15–20 кг</td>
+                    <td>50€</td>
+                    <td>55€</td>
+                  </tr>
+                </tbody>
+
+              </table>
+            </div>
+
+          </div>  
+
         </div>
 
       </div>
@@ -19,7 +309,63 @@
     </section>
 
 
-    <section class="readyHelp">
+    <section class="benefits benefits--empty benefits--indent">
+
+      <div class="container">
+
+        <div class="benefits__block">
+
+          <div class="benefits__unit">
+
+            <div class="benefits__box benefits__box--registration">
+              <span class="benefits__box-title">Удобное оформление</span>
+              <span class="benefits__box-text">Документы можно заполнить на русском языке, а оплатить — онлайн.</span>
+            </div>
+  
+            <div class="benefits__box benefits__box--insurance">
+              <span class="benefits__box-title">Страховка</span>
+              <ul class="benefits__box-list">
+                <li>
+                  <span>до 50€</span>
+                  <b>бесплатно</b>
+                </li>
+                <li>
+                  <span>от 50€</span>
+                  <b>7€</b>
+                </li>
+              </ul>
+            </div>
+
+          </div>
+
+          <div class="benefits__unit">
+
+            <div class="benefits__box benefits__box--import">
+              <span class="benefits__box-title">Беспошлинный ввоз</span>
+              <span class="benefits__box-text">У каждой страны существуют свои правила таможенных лимитов для ввоза посылок. Лимит — это максимальная сумма вложений в одну посылку, которая не облагается налогом.</span>
+              <span class="benefits__box-link">Таможенные лимиты</span>
+            </div>
+  
+            <div class="benefits__box benefits__box--tracking">
+              <span class="benefits__box-title">Отслеживание</span>
+              <span class="benefits__box-text">Каждой посылке присваивается трек номер. Отследить посылку вы можете <a href="#">на сайте.</a></span>
+            </div>
+  
+            <div class="benefits__box benefits__box--timing">
+              <span class="benefits__box-title">Сроки доставки</span>
+              <span class="benefits__box-text">10-15 рабочиx дней.</span>
+            </div>
+
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+
+
+    <section class="readyHelp readyHelp--indent">
 
       <div class="container">
 
