--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -118,6 +118,7 @@
         <li><a href="index.html">index.html</a></li>   
         <li><a href="contacts.html">contacts.html</a></li>  
         <li><a href="tariffs.html">tariffs.html</a></li>  
+        <li><a href="404.html">404.html</a></li>  
       </ol>
 
     </div>
