--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -119,6 +119,8 @@
         <li><a href="contacts.html">contacts.html</a></li>  
         <li><a href="tariffs.html">tariffs.html</a></li>  
         <li><a href="destination-country.html">destination-country.html</a></li>
+        <li><a href="regulations.html">regulations.html</a></li>
+        
         <li><a href="404.html">404.html</a></li>
       </ol>
 
