--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -121,6 +121,9 @@
         <li><a href="destination-country.html">destination-country.html</a></li>
         <li><a href="regulations.html">regulations.html</a></li>
         
+        <li><a href="entrance.html">entrance.html</a></li>
+        <li><a href="registration.html">registration.html</a></li>
+
         <li><a href="404.html">404.html</a></li>
       </ol>
 
