--- a/src/html/entrance.html
+++ b/src/html/entrance.html
@@ -14,7 +14,7 @@
           <form class="authorization__form authorization__form--entrance">
 
             <div class="authorization__title">
-              <span class="authorization__title-value">Вход</span>
+              <div class="title title--middle"><h1>Вход</h1></div>
               <a class="authorization__title-link" href="registration.html">Регистрация</a>
             </div>
   
