--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -123,6 +123,9 @@
         
         <li><a href="entrance.html">entrance.html</a></li>
         <li><a href="registration.html">registration.html</a></li>
+        <li><a href="password-recovery.html">password-recovery.html</a></li>
+        <li><a href="password-changes.html">password-changes.html</a></li>
+        <li><a href="check-mail.html">check-mail.html</a></li>
 
         <li><a href="404.html">404.html</a></li>
       </ol>
