--- a/src/html/password-changes.html
+++ b/src/html/password-changes.html
@@ -5,28 +5,20 @@
     @@include('components/header.html', {"header" : "", "index" : 0})
 
 
-    <section class="authorization">
+    <section class="authorization authorization--empty">
 
       <div class="container">
 
         <div class="authorization__block">
 
-          <form class="authorization__form authorization__form--registration">
+          <form class="authorization__form">
 
-            <div class="authorization__title">
-              <div class="title title--middle"><h1>Регистрация</h1></div>
-              <a class="authorization__title-link" href="entrance.html">Вход</a>
-            </div>
-  
+            <div class="title title--middle"><h1>Изменения пароля</h1></div>
+
             <div class="authorization__cont">
-  
+
               <div class="inputBox">
-                <span class="inputBox__title">E-mail</span>
-                <input class="inputBox__value" type="email" />
-              </div>
-  
-              <div class="inputBox">
-                <span class="inputBox__title">Пароль</span>
+                <span class="inputBox__title">Новый пароль</span>
                 <input class="inputBox__value" type="password" />
               </div>
 
@@ -34,11 +26,11 @@
                 <span class="inputBox__title">Повторите пароль</span>
                 <input class="inputBox__value" type="password" />
               </div>
-  
+
             </div>
-  
+
             <div class="authorization__button">
-              <button class="button">Зарегистрироваться</button>
+              <button class="button">Сохранить</button>
             </div>
   
           </form>
