--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -102,6 +102,13 @@
     ol li a:hover {
       color: #031261;
     }
+
+    .separator {
+      position: relative;
+      width: 60%;
+      border-top: 1px solid rgb(53, 53, 51, 0.2);
+      margin-top: 15px;
+    }
     
   </style>
 
@@ -127,7 +134,11 @@
         <li><a href="password-changes.html">password-changes.html</a></li>
         <li><a href="check-mail.html">check-mail.html</a></li>
 
-        <li><a href="404.html">404.html</a></li>
+
+        <li class="separator"><a href="parcel-registration-step-1.html">parcel-registration-step-1.html</a></li>
+
+
+        <li class="separator"><a href="404.html">404.html</a></li>
       </ol>
 
     </div>
