Add Step 1-2 and new select

--- a/src/html/404.html
+++ b/src/html/404.html
@@ -2,7 +2,7 @@
 
   <div class="totalContainer"> 
     
-    @@include('components/header.html', {"header" : "header--border", "index" : 0})
+    @@include('components/header.html', {"header" : "header--border", "index" : 0, "authorization" : 0})
 
 
     <section class="page-404">
