--- a/src/html/contacts.html
+++ b/src/html/contacts.html
@@ -2,7 +2,7 @@
 
   <div class="totalContainer"> 
     
-    @@include('components/header.html', {"header" : "header--border", "index" : 2})
+    @@include('components/header.html', {"header" : "header--border", "index" : 2, "authorization" : 0})
 
 
     <section class="contacts">
