--- a/src/html/destination-country.html
+++ b/src/html/destination-country.html
@@ -2,7 +2,7 @@
 
   <div class="totalContainer"> 
     
-    @@include('components/header.html', {"header" : "header--border", "index" : 0})
+    @@include('components/header.html', {"header" : "header--border", "index" : 0, "authorization" : 1})
 
 
     <section class="destinationCountry">
@@ -79,11 +79,7 @@
 
     </section>
 
-
-    <div class="hFooter"></div>
-
   </div>
-  
-@@include('components/footer.html')
+
 @@include('components/end.html')
    
