--- a/src/html/tariffs.html
+++ b/src/html/tariffs.html
@@ -2,7 +2,7 @@
 
   <div class="totalContainer"> 
     
-    @@include('components/header.html', {"header" : "header--border", "index" : 1})
+    @@include('components/header.html', {"header" : "header--border", "index" : 1, "authorization" : 0})
 
 
     <section class="tariffs">
