--- a/src/html/entrance.html
+++ b/src/html/entrance.html
@@ -2,7 +2,7 @@
 
   <div class="totalContainer"> 
     
-    @@include('components/header.html', {"header" : "", "index" : 0})
+    @@include('components/header.html', {"header" : "", "index" : 0, "authorization" : 0})
 
 
     <section class="authorization">
