--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -136,7 +136,10 @@
 
 
         <li class="separator"><a href="parcel-registration-step-1.html">parcel-registration-step-1.html</a></li>
-
+        <li><a href="parcel-registration-step-2_a.html">parcel-registration-step-2_a.html</a></li>
+        <li><a href="parcel-registration-step-2_b.html">parcel-registration-step-2_b.html</a></li>
+        <li><a href="parcel-registration-step-3.html">parcel-registration-step-3.html</a></li>
+        <li><a href="parcel-registration-step-4.html">parcel-registration-step-4.html</a></li>
 
         <li class="separator"><a href="404.html">404.html</a></li>
       </ol>
