Add part parsel pages

--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -139,8 +139,11 @@
         <li><a href="parcel-registration-step-2_a.html">parcel-registration-step-2_a.html</a></li>
         <li><a href="parcel-registration-step-2_b.html">parcel-registration-step-2_b.html</a></li>
         <li><a href="parcel-registration-step-3.html">parcel-registration-step-3.html</a></li>
-        <li><a href="parcel-registration-step-4.html">parcel-registration-step-4.html</a></li>
+        <li><a href="parcel-registration-step-4_a.html">parcel-registration-step-4_a.html</a></li>
+        <li><a href="parcel-registration-step-4_b.html">parcel-registration-step-4_b.html</a></li>
+        <li><a href="parcel-check-data.html">parcel-check-data.html</a></li>
 
+        
         <li class="separator"><a href="404.html">404.html</a></li>
       </ol>
 
