--- a/src/html/parcel-registration-step-3_.html
+++ b/src/html/parcel-registration-step-3_.html
@@ -18,7 +18,7 @@
             <div class="parcel__steps">
               <ul class="parcel__steps-title">
                 <li>Оформление посылки</li>
-                <li><span>3</span> из <span>4</span></li>
+                <li><span>1</span> из <span>4</span></li>
               </ul>
               <div class="parcel__steps-block">
                 <div class="parcel__steps-box active"></div>
@@ -32,9 +32,7 @@
 
             <div class="parcel__block">
 
-
-
-
+            
             </div>
 
             <div class="parcel__button">
@@ -68,7 +66,13 @@
 
     </section>
 
+
+
+
+    <div class="hFooter"></div>
+
   </div>
   
+@@include('components/footer.html')
 @@include('components/end.html')
    
