--- a/src/html/parcel-registration-step-4_a.html
+++ b/src/html/parcel-registration-step-4_a.html
@@ -35,9 +35,8 @@
               <li>Курьером</li>
             </ul>
 
-            <div class="parcel__points">
+            <div class="parcel__points active">
 
-              <!--
               <div class="parcel__pointsList">
 
                 <div class="parcel__pointsList-box">
@@ -60,7 +59,7 @@
                   <div class="parcel__pointsList-side">
                     <div class="parcel__pointsList-text">
                       <h4>Loja CTT Heróis de Chaimite (Odivelas)</h4>
-                      <p>Rua Heróis de Chaimite №43, Odivelas 2675-998</p>
+                      <p>R. São Cristóvão 875, Famões, 1685-820</p>
                     </div>
                     <ul class="parcel__pointsList-list">
                       <li>09:00–12:30</li>
@@ -93,25 +92,44 @@
                 </div>
 
               </div>
-              -->
+           
+            </div>
 
-              <div class="parcel__pointsMap">
+            <div class="parcel__courier">
+              <div class="parcel__courier-info">
+                <p>Курьер приедет по адресу, который вы указали в отправлении. Это будет бесплатно.</p>
+              </div>
 
-                <div class="parcel__pointsMap-side">
-                  <div class="parcel__pointsMap-text">
-                    <h4>Loja CTT Heróis de Chaimite (Odivelas)</h4>
-                    <p>Rua Heróis de Chaimite №43, Odivelas 2675-998</p>
+              <span class="parcel__separatorText">Когда курьеру подъехать</span>
+
+              <div class="parcel__courier-block">
+
+                <div class="parcel__courier-box">
+
+                  <div class="inputBox">
+                    <span class="inputBox__title">Дата</span>
+                    <input class="inputBox__value input-calendar" type="text" />
                   </div>
-                  <ul class="parcel__pointsMap-list">
-                    <li>09:00–12:30</li>
-                    <li>14:00–18:00</li>
-                  </ul>
+
                 </div>
 
-                <div class="parcel__pointsMap-side">
-                  <span class="button button--min button--empty">Выбрать другой пункт</span>
+                <div class="parcel__courier-box">
+
+                  <div class="inputBox">
+                    <span class="inputBox__title">Время</span>
+                    <div class="select">
+                      <select>
+                        <option>Выберите время</option>
+                        <option>9:00–12:00</option>
+                        <option>12:00–15:00</option>
+                        <option>15:00–18:00</option>
+                        <option>18:00–21:00</option>
+                      </select>
+                    </div>
+                  </div>
+
                 </div>
-        
+
               </div>
 
             </div>
@@ -124,7 +142,7 @@
 
           <div class="parcel__side-box">
 
-            <div class="parcel__approximatePrice">
+            <div class="parcel__approximatePrice parcel__approximatePrice--info">
               <div class="parcel__approximatePrice-icon"></div>
               <span class="parcel__approximatePrice-info">Пересылка <b>35€</b></span>
               <span class="parcel__approximatePrice-info">Страховка <b class="text-color-green">Бесплатно</b></span>
@@ -138,13 +156,7 @@
 
     </section>
 
-
-
-
-    <div class="hFooter"></div>
-
   </div>
   
-@@include('components/footer.html')
 @@include('components/end.html')
    
