Add pages - check data

--- a/src/html/parcel-check-data.html
+++ b/src/html/parcel-check-data.html
@@ -18,10 +18,10 @@
             <span class="parcel__informer parcel__informer--green">Мы перевели данные на английский язык, проверьте верно ли. </span>
           </div>
 
-          <div class="parcel__side-unit">
+          <div class="parcel__side-unit parcel__side-unit--left">
 
             <div class="parcel__dataInfo">
-              <h2>Отправитель</h2>
+              <div class="parcel__title"><h2>Отправитель</h2></div>
               <ul>
                 <li>Petrov Vasiliy</li>
                 <li>example@post.com</li>
@@ -33,15 +33,51 @@
 
           </div>
 
-          <div class="parcel__side-unit">
+          <div class="parcel__side-unit parcel__side-unit--right">
 
             <div class="parcel__dataInfo">
-              <h2>Получатель</h2>
+              <div class="parcel__title"><h2>Получатель</h2></div>
               <ul>
                 <li>Kalinin Mark</li>
                 <li>+7 911 945-24-23</li>
                 <li>197198, Russia, Saint-Petersburg, Mytninskiy lane 11, 54</li>
               </ul>
+            </div>
+
+          </div>
+
+          <div class="parcel__side-send">
+
+            <div class="parcel__send">
+
+              <div class="parcel__send-box">
+                <button class="button">Оплатить 3€</button>
+              </div>
+  
+              <div class="parcel__send-box">
+                <span class="parcel__send-info">3€— это знак, что вы действительно хотите отправить посылку.</span>
+              </div>
+  
+              <div class="parcel__send-box">
+                <a class="button button--edit" href="#"><span>Редактировать</span><span>Ред.</span></a>
+              </div>
+  
+              <div class="parcel__send-box">
+
+                <div class="checkBox">
+                  <input type="checkbox" id="checkbox-info" />
+                  <label for="checkbox-info">Ознакомлен</label>
+                  <a href="#">с перечнем запрещенных для пересылки товаров</a>
+                </div>
+
+                <div class="checkBox">
+                  <input type="checkbox" id="checkbox-dimensions" />
+                  <label for="checkbox-dimensions">Габариты посылки не превышают</label>
+                  <a href="#">установленные нормы</a>
+                </div>
+
+              </div>
+
             </div>
 
           </div>
