--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -142,8 +142,9 @@
         <li><a href="parcel-registration-step-4_a.html">parcel-registration-step-4_a.html</a></li>
         <li><a href="parcel-registration-step-4_b.html">parcel-registration-step-4_b.html</a></li>
         <li><a href="parcel-check-data.html">parcel-check-data.html</a></li>
+        <li><a href="parcel-check-data-editing.html">parcel-check-data-editing.html</a></li>
 
-        
+
         <li class="separator"><a href="404.html">404.html</a></li>
       </ol>
 
