--- a/src/html/pages.html
+++ b/src/html/pages.html
@@ -146,6 +146,10 @@
         <li><a href="parcel-check-data-editing.html">parcel-check-data-editing.html</a></li>
 
 
+        <li class="separator"><a href="payment.html">payment.html</a></li>
+        <li><a href="order-processed.html">order-processed.html</a></li>
+
+
         <li class="separator"><a href="404.html">404.html</a></li>
       </ol>
 
